@@ -289,9 +289,12 @@ public class GASHAdmin extends JApplet implements Runnable, ActionListener, RMIS
 
 		if (properties_file != null)
 		  {
+		    BufferedInputStream bis = null;
+
 		    try
 		      {
-			ganymedeProperties.load(new BufferedInputStream(new FileInputStream(properties_file)));
+			bis = new BufferedInputStream(new FileInputStream(properties_file));
+			ganymedeProperties.load(bis);
 		      }
 		    catch (java.io.FileNotFoundException e)
 		      {
@@ -300,6 +303,19 @@ public class GASHAdmin extends JApplet implements Runnable, ActionListener, RMIS
 		    catch (java.io.IOException e)
 		      {
 			throw new RuntimeException("Whoa, io exception: " + e);
+		      }
+		    finally
+		      {
+			if (bis != null)
+			  {
+			    try
+			      {
+				bis.close();
+			      }
+			    catch (IOException ex)
+			      {
+			      }
+			  }
 		      }
 		  }
 	      }
@@ -564,7 +580,7 @@ public class GASHAdmin extends JApplet implements Runnable, ActionListener, RMIS
     gbl.setConstraints(buttonPanel, gbc);
     panel.add(buttonPanel);
 
-    loginButton = new JButton(ts.l("global.connectingButtonMsg", new Character(spinAry[spindex])));
+    loginButton = new JButton(ts.l("global.connectingButtonMsg", Character.valueOf(spinAry[spindex])));
     loginButton.setOpaque(true);
     loginButton.setEnabled(true);
     loginButton.addActionListener(this);
@@ -648,7 +664,7 @@ public class GASHAdmin extends JApplet implements Runnable, ActionListener, RMIS
 		      {
 			public void run()
 			{
-			  localLoginBox.loginButton.setText(ts.l("global.connectingButtonMsg", new Character(spinAry[spindex])));
+			  localLoginBox.loginButton.setText(ts.l("global.connectingButtonMsg", Character.valueOf(spinAry[spindex])));
 			}
 		      });
 		  }
@@ -774,7 +790,7 @@ public class GASHAdmin extends JApplet implements Runnable, ActionListener, RMIS
 
 	    connected.set(false);
 
-	    loginButton.setText(ts.l("global.connectingButtonMsg", new Character(spinAry[spindex])));
+	    loginButton.setText(ts.l("global.connectingButtonMsg", Character.valueOf(spinAry[spindex])));
 	    new Thread(this).start();
 	    return;
 	  }
